crates/doodle-core/tests/snapshots/broken_syntax__08_missing_fn_end.snap
---
source: crates/doodle-core/tests/broken_syntax.rs
expression: "render_diagnostics(&diagnostics, &view)"
---
error[syntax-error]: expected `end` to close this `fn`
  --> 08-missing-fn-end.doodle:1:1
1 | fn double(n)
  | ^^
